<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_md"
    android:background="@drawable/bg_rounded_bottom_sheet"
    android:padding="@dimen/padding_small">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_product_image"
        android:layout_width="@dimen/img_wd"
        android:layout_height="@dimen/img_hg"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/product_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_product_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/sample_product_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_body"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_product_image"
        app:layout_constraintStart_toStartOf="@+id/iv_product_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_price"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/text_size_body"
        app:layout_constraintEnd_toEndOf="@+id/tv_product_title"
        app:layout_constraintStart_toStartOf="@+id/tv_product_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
